# fountouki

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
android/: README.md  build.sh  make-icons.sh
app/: Cargo.toml
app/assets/emoji/: ATTRIBUTION.md
app/src/: anim.rs  chrome.rs  confetti.rs  draw.rs  emoji.rs  input.rs  kb.rs  layout.rs  main.rs  net.rs  palette.rs  parent.rs  scene.rs  sound.rs  store.rs  text.rs
app/src/draw/: critters.rs  frog.rs  glyphs.rs  house.rs  mod.rs  prim.rs  scenery.rs  site.rs  train.rs
app/src/games/: clock.rs  mod.rs  patterns.rs  phonics.rs  picker.rs  singback.rs  tracing.rs
core/: Cargo.toml
core/src/: audio.rs  clock.rs  deck.rs  lib.rs  patterns.rs  rng.rs  route.rs  settings.rs  singback.rs  srs.rs  storage.rs  sync.rs  themes.rs  tracing.rs  tracing_data.rs
docs/: IDEAS.md  TODO.md
docs/port-spec/: audio-fx.md  patterns.md  phonics.md  shell.md  (+2 more)
ios/: Info.plist  LaunchScreen.storyboard  README.md  build.sh  fountouki.entitlements.plist
public/: index.html  manifest.webmanifest  style.css  sw.js
server/: README.md  worker.ts  wrangler.toml
src/: confetti.ts  game.ts  main.ts  patterns.ts  picker.ts  router.ts  sounds.ts  themes.ts
tools/: _browser.mjs  _chrome.mjs  golden-diff.sh  goldens.sh  icons.mjs  ios-layout-test.mjs  parent-settings-test.mjs  phonics-test.mjs  picker-test.mjs  playtest.mjs  screenshots.mjs  sw-offline-test.mjs  unit-mode-test.mjs
web/: index.html  storage.js  sw.js  text_input.js
(+18 files in other folders)
