[package]
name = "fountouki"
version = "0.1.0"
edition = "2021"

[dependencies]
# `audio` is opt-in as of macroquad 0.4.15 (default features dropped it). Without
# it `macroquad::audio` compiles to a silent dummy backend where every play is a
# no-op — this is why sound never worked since the Rust port.
macroquad = { version = "0.4", features = ["audio"] }
fountouki-core = { path = "../core" }
nanoserde = "0.1"
quad-net = "0.1"

# Web-only: string marshalling for the hidden-<input> soft-keyboard bridge
# (`kb.rs` + `web/text_input.js`). Already in the tree via quad-net.
[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"
